# env-butler

./: .gitignore  CHANGELOG.md  LICENSE  README.md  index.html  package-lock.json  package.json  tsconfig.json  vitest.config.ts  vitest.setup.ts
.github/workflows/: ci.yml  release.yml
crates/cli/: Cargo.toml
crates/cli/src/: ci_commands.rs  helpers.rs  main.rs  sync_commands.rs  team_commands.rs
crates/core/: Cargo.toml
crates/core/src/: ci_token.rs  crypto.rs  envelope.rs  error.rs  lib.rs  meta.rs  scanner.rs  supabase_team.rs  team.rs  vault_migration.rs
docs/: code-standards.md  codebase-summary.md  development-roadmap.md  project-overview-pdr.md  system-architecture.md
landing/: package-lock.json  package.json  tailwind.config.ts
landing/app/: layout.tsx  page.tsx
landing/app/docs/: layout.tsx  page.tsx
landing/app/docs/architecture/: page.tsx
landing/app/docs/faq/: page.tsx
landing/app/docs/getting-started/: page.tsx
landing/app/docs/security/: page.tsx
landing/components/: bypass-guide.tsx  core-values.tsx  docs-sidebar.tsx  download-section.tsx  footer.tsx  hero.tsx  how-it-works.tsx  sync-options.tsx
plans/260305-1347-env-butler/: phase-01-scaffold-tauri-project.md  phase-02-rust-crypto-and-surgical-butler.md  phase-03-react-frontend-dashboard.md  phase-04-supabase-vault-sync.md  phase-05-github-actions-cicd.md  phase-06-landing-page.md  plan.md
plans/reports/: brainstorm-260305-1344-env-butler-architecture.md
scripts/: generate-update-manifest.mjs
src/: app.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: crypto.rs  error.rs  file_sync.rs  lib.rs  meta.rs  recovery.rs  scanner.rs  supabase.rs  vault.rs
src-tauri/src/commands/: file_sync.rs  mod.rs  project.rs  sync.rs  team.rs
src/components/: dashboard-cloud-sync.tsx  dashboard-file-sync.tsx  dashboard-team-members-list.tsx  dashboard-team-section.tsx  diff-view.test.tsx  diff-view.tsx  master-key-input.test.tsx  master-key-input.tsx  project-status-card.test.tsx  project-status-card.tsx  push-preview-modal.tsx  recovery-kit-display.test.tsx  recovery-kit-display.tsx  settings-project-list.tsx  settings-supabase-form.test.tsx  settings-supabase-form.tsx  settings-sync-folder.tsx  update-checker.test.tsx  update-checker.tsx
src/hooks/: use-project-state.ts
src/lib/: diff-engine.test.ts  diff-engine.ts  env-parser.test.ts  env-parser.ts  error-utils.test.ts  error-utils.ts  tauri-commands.ts
src/pages/: dashboard.tsx  onboarding.tsx  settings.tsx
supabase/migrations/: 001_create_vault_table.sql  002_team_v2_envelope_encryption.sql  003_team_v2_rls_member_scoping.sql
