[package]
name = "env-butler"
version = "0.1.0"
description = "Secure .env sync tool with zero-knowledge encryption"
authors = ["hieuphan94"]
license = "MIT"
repository = "https://github.com/hieuphan94/env-butler"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6" }

[dependencies]
tauri = { version = "2.10.3" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
tauri-plugin-log = "2"

# Crypto
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha2 = "0.10"
hex = "0.4"

# Recovery
tiny-bip39 = "1.0"

# File handling
zip = "0.6"

# HTTP (Supabase)
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Utilities
dirs = "5.0"
anyhow = "1.0"
thiserror = "1.0"
chrono = { version = "0.4", features = ["serde"] }
zeroize = { version = "1", features = ["derive"] }

[dev-dependencies]
tempfile = "3"
