[package]
name = "env-butler"
version = "0.1.0"
description = "Secure .env sync tool with zero-knowledge encryption"
authors = ["hieuphan94"]
license = "MIT"
repository = "https://github.com/hieuspaceos/env-butler"
edition = "2021"
rust-version = "1.77.2"

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.6", features = [] }

[dependencies]
env-butler-core = { path = "../crates/core" }
tauri = { version = "2.10.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
log = "0.4"
hex = "0.4"
tauri-plugin-log = "2"
tauri-plugin-dialog = "2.6.0"
tauri-plugin-fs = "2.4.5"
