[package]
name = "env-butler-cli"
version = "0.5.0"
edition = "2021"
description = "CLI for Env Butler — sync .env files from the terminal"

[[bin]]
name = "env-butler"
path = "src/main.rs"

[dependencies]
env-butler-core = { path = "../core" }
clap = { version = "4", features = ["derive"] }
rpassword = "7"
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
hex = "0.4"
